syntax = "proto3";
package com.rmgYantra.loginapp.proto;
option java_multiple_files = true;
option java_package = "com.rmgYantra.loginapp.proto";
option java_outer_classname = "ProjectsProto";

message Project {
  string projectId = 1;
  string projectName = 2;
  int32 teamSize = 3;
  string createdBy = 4;
  string createdOn = 5;
  string status = 6;
  // Add other fields as needed

}

service ProjectService {
  rpc GetAllProjects(Empty) returns (ProjectList);
  rpc GetProjectById(ProjectId) returns (Project);
}

message ProjectId {
  string projectId = 1;
}

message Empty {}

message ProjectList {
  repeated Project projects = 1;
}
